--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,7 +7,14 @@ spring:
 ---
 
 spring:
-  profiles: default
+  config:
+    activate:
+      on-profile: default
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 
   datasource:
@@ -94,6 +101,9 @@ logging:
     org.hibernate.type: trace
     org.springframework.cloud: debug
 
+jwt:
+  secret: ${SECRET_KEY}
+  expiration: 3600000
 
 server:
   port: 8082
@@ -101,7 +111,9 @@ server:
 ---
 
 spring:
-  profiles: docker
+  config:
+    activate:
+      on-profile: docker
   jpa:
     properties:
       hibernate:
