--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -10,3 +10,18 @@ google-search-results
 pymupdf
 python-docx
 gradio
+fastapi
+uvicorn
+python-multipart
+python-multipart          
+pillow
+numpy
+torch>=2.6.0
+torchvision
+ultralytics                
+clip    
+opencv-python              
+requests
+python-dotenv
+sentence-transformers
+openai
