--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     name: backend
 ---
 
+my:
+  admin_mail: ${ADMIN_EMAIL}
+  admin_password: ${ADMIN_PASSWORD}
+
 spring:
   config:
     activate:
@@ -45,6 +49,7 @@ spring:
   # sql:
   #   init:
   #     mode: always
+
 
 
   mail:
