--- a/front/package.json
+++ b/front/package.json
@@ -2,8 +2,7 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:8082",
-
+  "proxy": "http://localhost:8082",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
@@ -14,7 +13,9 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
