--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Java / Gradle ###
 HELP.md
 .gradle
 build/
@@ -35,3 +36,28 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Node / React (front) ###
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+
+### Env files ###
+.env
+.env.local
+.env.*.local
+ㄴ
+### Python 가상환경 ###
+venv/
+.venv/
+.env/
+__pycache__/
+
+### macOS ###
+.DS_Store
+
+### Logs ###
+*.log
