게시물 등록 시 이미지 azure에 저장 및 불러오기

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,7 +13,7 @@ my:
 azure:
   account_key: ${ACCOUNT_KEY}
   account_name: ${ACCOUNT_NAME}
-  connection_string: ${CONNECTION_STRING}}
+  connection_string: ${CONNECTION_STRING}
   container_name: ${CONTAINER_NAME}
 spring:
   config:
