--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -19,7 +19,10 @@ spring:
   config:
     activate:
       on-profile: default
-
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 11MB
   data:
     redis:
       host: localhost
