--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^19.1.7",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
