--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,30 @@
-version: "3.8"
+version: "3.9"
 
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpw
-      MYSQL_DATABASE: bp
-      MYSQL_USER: bpuser
-      MYSQL_PASSWORD: bppw
-    ports:
-      - "3307:3306"
-    volumes:
-      - ./mysql-data:/var/lib/mysql
-
-  redis:
-    image: redis:7
-    container_name: redis
-    restart: always
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./redis-data:/data
-
   backend:
     build: ./backend
     container_name: backend
-    restart: always
-    depends_on:
-      - mysql
-      - redis
     ports:
-      - "8082:8082"   # ✅ backend는 8082 포트
+      - "8082:8082"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/bp
-      SPRING_DATASOURCE_USERNAME: bpuser
-      SPRING_DATASOURCE_PASSWORD: bppw
-      REDIS_HOST: redis
-      # 필요하다면 MAIL_USERNAME, MAIL_PASSWORD 등도 추가 가능
+      SPRING_DATASOURCE_URL: jdbc:mysql://apfm-mysql.mysql.database.azure.com:3306/apfmdb?useSSL=true
+      SPRING_DATASOURCE_USERNAME: adminuser
+      SPRING_DATASOURCE_PASSWORD: MyPassword123!
+      SPRING_REDIS_HOST: apfm-redis.redis.cache.windows.net
+      SPRING_REDIS_PORT: 6380
+      SPRING_REDIS_PASSWORD: <PrimaryKey>
+    depends_on:
+      - frontend
+      - fastapi
+
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+      - "80:80"
 
   fastapi:
     build: ./AI
     container_name: fastapi
-    restart: always
-    depends_on:
-      - backend
     ports:
-      - "8000:8000"   # ✅ FastAPI는 8000 포트
-    # environment:
-    # GPU 사용 환경이면 NVIDIA_VISIBLE_DEVICES 추가 가능
-    # NVIDIA_VISIBLE_DEVICES: all
-    # (현재는 CPU 기준)
-
-  frontend:
-    build: ./front
-    container_name: frontend
-    restart: always
-    depends_on:
-      - backend
-      - fastapi
-    ports:
-      - "3000:80"     # ✅ 프론트는 3000 포트로 접근
+      - "8000:8000"
