--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,17 +1,12 @@
-# [빌드 단계]
-FROM node:18-alpine AS builder
+# frontend/Dockerfile
+FROM node:20 AS build
 WORKDIR /app
-
-COPY package*.json ./
+COPY package.json package-lock.json ./
 RUN npm install
-
 COPY . .
 RUN npm run build
 
-# [실행 단계: Nginx]
-FROM nginx:alpine
-COPY --from=builder /app/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
+FROM nginx:1.25
+COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx","-g","daemon off;"]
