--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,6 +16,10 @@ azure:
   connection_string: ${CONNECTION_STRING}
   container_name: ${CONTAINER_NAME}
 
+management:
+  tracing:
+    enabled: false
+
 spring:
   config:
     activate:
