--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -2,17 +2,40 @@ server {
     listen 80;
     server_name _;
 
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # SPA fallback: /login, /dashboard 등 모든 React 라우트
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html;
         try_files $uri /index.html;
     }
 
-    location /api/ {
-        proxy_pass http://backend:8082/;
+    # 정적 파일
+    location /static/ {
+        try_files $uri =404;
     }
 
+    # Spring Boot 백엔드 API
+    location /api/ {
+        proxy_pass http://backend:8082/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # FastAPI AI 서버
     location /ai/ {
         proxy_pass http://fastapi:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # 캐시된 파일에 대해 304 응답
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
+        try_files $uri =404;
+        expires 30d;
+        access_log off;
+        add_header Cache-Control "public";
     }
 }
