Update azure-pipelines.yml for Azure Pipelines
run in pc

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
   - job: Build_Backend
     displayName: Build Backend
     pool:
-      vmImage: $(vmImageName)
+      name: Default
     steps:
     - task: Docker@2
       displayName: Build and push Backend image
@@ -40,7 +40,7 @@ stages:
   - job: Build_Frontend
     displayName: Build Frontend
     pool:
-      vmImage: $(vmImageName)
+      name: Default
     steps:
     - task: Docker@2
       displayName: Build and push Frontend image
@@ -55,7 +55,7 @@ stages:
   - job: Build_Fastapi
     displayName: Build FastAPI
     pool:
-      vmImage: $(vmImageName)
+      name: Default
     steps:
     - task: Docker@2
       displayName: Build and push FastAPI image
@@ -71,7 +71,7 @@ stages:
   - job: Publish_Manifests
     displayName: Publish manifests
     pool:
-      vmImage: $(vmImageName)
+      name: Default
     steps:
     - upload: manifests
       artifact: manifests
@@ -86,7 +86,7 @@ stages:
   - deployment: Deploy
     displayName: Deploy to AKS
     pool:
-      vmImage: $(vmImageName)
+      name: Default
     environment: 'dnjsdn752APFM.apfm'
     strategy:
       runOnce:
