--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ stages:
       inputs:
         command: buildAndPush
         repository: dnjsdnapfm-frontend
-        dockerfile: frontend/Dockerfile
+        dockerfile: front/Dockerfile
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
