--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,21 +54,21 @@ stages:
         tags: |
           $(tag)
 
-  - job: Build_Fastapi
-    displayName: Build FastAPI
-    pool:
-      name: Default
-    steps:
-    - task: Docker@2
-      displayName: Build and push FastAPI image
-      inputs:
-        command: buildAndPush
-        repository: dnjsdnapfm-fastapi
-        dockerfile: AI/Dockerfile
-        buildContext: AI
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+  # - job: Build_Fastapi
+  #   displayName: Build FastAPI
+  #   pool:
+  #     name: Default
+  #   steps:
+  #   - task: Docker@2
+  #     displayName: Build and push FastAPI image
+  #     inputs:
+  #       command: buildAndPush
+  #       repository: dnjsdnapfm-fastapi
+  #       dockerfile: AI/Dockerfile
+  #       buildContext: AI
+  #       containerRegistry: $(dockerRegistryServiceConnection)
+  #       tags: |
+  #         $(tag)
 
   # 👉 manifests 디렉토리를 아티팩트로 업로드 (배포 단계에서 사용)
   - job: Publish_Manifests
@@ -115,4 +115,4 @@ stages:
               containers: |
                 backend=$(containerRegistry)/dnjsdnapfm-backend:$(tag)
                 frontend=$(containerRegistry)/dnjsdnapfm-frontend:$(tag)
-                fastapi=$(containerRegistry)/dnjsdnapfm-fastapi:$(tag)
+                fastapi=apfmrg.azurecr.io/fastapi:latest
