--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -25,10 +25,15 @@ server {
 
     # FastAPI AI 서버
     location /ai/ {
-        proxy_pass http://fastapi:8000/;
+        proxy_pass http://fastapi:8080/ai/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_connect_timeout 600s;  # 백엔드 연결 시간
+        proxy_send_timeout    600s;  # 요청 전송 시간
+        proxy_read_timeout    600s;  # 응답 대기 시간
+        send_timeout          600s;  # 클라이언트 전송 대기
     }
 
     # 캐시된 파일에 대해 304 응답
