--- a/k8s/fastapi-deploy.yaml
+++ b/k8s/fastapi-deploy.yaml
@@ -15,15 +15,28 @@ spec:
       containers:
         - name: fastapi
           # 필요한 import(이미지): ACR 경로 최신 반영
-          image: apfmregistry.azurecr.io/fastapi:latest
+          image: apfmrg.azurecr.io/fastapi:latest
           ports:
-            - containerPort: 8000
+            - containerPort: 8080
+          resources:
+            requests:
+              memory: "2Gi"
+              cpu: "500m"
+            limits:
+              memory: "4Gi"
+              cpu: "1"
           readinessProbe:
-            httpGet: { path: /health, port: 8000 }
-            initialDelaySeconds: 10
+            httpGet: { path: /health, port: 8080 }
+            initialDelaySeconds: 300
+            timeoutSeconds: 30
+            periodSeconds: 15
+            failureThreshold: 5
           livenessProbe:
-            httpGet: { path: /health, port: 8000 }
-            initialDelaySeconds: 15
+            httpGet: { path: /health, port: 8080 }
+            initialDelaySeconds: 300
+            timeoutSeconds: 30
+            periodSeconds: 15
+            failureThreshold: 5
 ---
 apiVersion: v1
 kind: Service
@@ -35,5 +48,5 @@ spec:
   selector:
     app: fastapi
   ports:
-    - port: 8000
-      targetPort: 8000
+    - port: 8080
+      targetPort: 8080
