--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,6 @@ resources:
 variables:
   dockerRegistryServiceConnection: '05c23959-ace4-4487-a73b-d09fe638aff7'
   containerRegistry: 'apfmrg.azurecr.io'
-  tag: '$(Build.BuildId)'
   imagePullSecret: 'apfmrgf81e-auth'
   vmImageName: 'ubuntu-latest'
 
@@ -36,7 +35,8 @@ stages:
         buildContext: backend
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
-          $(tag)
+          latest              # ✅ 항상 latest 태그로도 push
+          $(Build.BuildId)
 
   - job: Build_Frontend
     displayName: Build Frontend
@@ -52,7 +52,8 @@ stages:
         buildContext: front
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
-          $(tag)
+          latest              # ✅ 항상 latest 태그로도 push
+          $(Build.BuildId)
 
   # - job: Build_Fastapi
   #   displayName: Build FastAPI
@@ -113,6 +114,6 @@ stages:
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
-                backend=$(containerRegistry)/dnjsdnapfm-backend:$(tag)
-                frontend=$(containerRegistry)/dnjsdnapfm-frontend:$(tag)
-                fastapi=apfmrg.azurecr.io/fastapi:latest
+                backend=$(containerRegistry)/dnjsdnapfm-backend:latest   # ✅ latest로 고정
+                frontend=$(containerRegistry)/dnjsdnapfm-frontend:latest # ✅ latest로 고정
+                fastapi=apfmrg.azurecr.io/dnjsdnapfm-fastapi:latest     # ✅ 팀원 이미지 정확히 지정
