--- a/manifests/fastapi.yml
+++ b/manifests/fastapi.yml
@@ -4,7 +4,12 @@ metadata:
   name: fastapi
   namespace: apfm
 spec:
-  replicas: 1
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   selector:
     matchLabels:
       app: fastapi
@@ -15,9 +20,21 @@ spec:
     spec:
       containers:
         - name: fastapi
-          image: apfmrg.azurecr.io/dnjsdnapfm-fastapi:latest   # ✅ 팀원 FastAPI 이미지
+          image: apfmrg.azurecr.io/dnjsdnapfm-fastapi:latest
           ports:
             - containerPort: 8000
+          readinessProbe:
+            httpGet:
+              path: /docs
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /docs
+              port: 8000
+            initialDelaySeconds: 30
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
