--- a/manifests/frontend.yml
+++ b/manifests/frontend.yml
@@ -4,7 +4,12 @@ metadata:
   name: frontend
   namespace: apfm
 spec:
-  replicas: 1
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   selector:
     matchLabels:
       app: frontend
@@ -15,9 +20,21 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: apfmrg.azurecr.io/dnjsdnapfm-frontend:latest   # ✅ Frontend 이미지
+          image: apfmrg.azurecr.io/dnjsdnapfm-frontend:latest
           ports:
             - containerPort: 80
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 30
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
@@ -25,7 +42,7 @@ metadata:
   name: frontend
   namespace: apfm
 spec:
-  type: LoadBalancer
+  type: LoadBalancer          # ✅ 외부에서 접속 가능
   selector:
     app: frontend
   ports:
