--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -21,6 +21,8 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        client_max_body_size 20M;
     }
 
     # FastAPI AI 서버
@@ -34,6 +36,8 @@ server {
         proxy_send_timeout    600s;  # 요청 전송 시간
         proxy_read_timeout    600s;  # 응답 대기 시간
         send_timeout          600s;  # 클라이언트 전송 대기
+
+        client_max_body_size 20M;
     }
 
     # 캐시된 파일에 대해 304 응답
