--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,15 @@ stages:
     displayName: Build Frontend
     pool:
       name: Default
+    variables:
+      - group: frontend-secrets      
     steps:
+    # 👉 프론트 .env 파일 생성
+    - script: |
+        echo "REACT_APP_KAKAO_JS_KEY=$(REACT_APP_KAKAO_JS_KEY)" > front/.env
+        echo ".env file created:"
+        cat front/.env
+      displayName: 'Create .env file for frontend build'
     - task: Docker@2
       displayName: Build and push Frontend image
       inputs:
@@ -104,7 +112,7 @@ stages:
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
 
-          - task: KubernetesManifest@0
+          - task: KubernetesManifest@1
             displayName: Deploy backend, frontend, fastapi
             inputs:
               action: deploy
