Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,11 +45,11 @@ stages:
     variables:
       - group: frontend-secrets      
     steps:
-    # 👉 프론트 .env 파일 생성
+    # 👉 프론트 .env 파일 생성 (Windows CMD 호환)
     - script: |
-        echo "REACT_APP_KAKAO_JS_KEY=$(REACT_APP_KAKAO_JS_KEY)" > front/.env
-        echo ".env file created:"
-        cat front/.env
+        echo REACT_APP_KAKAO_JS_KEY=$(REACT_APP_KAKAO_JS_KEY) > front\.env
+        echo .env file created:
+        type front\.env
       displayName: 'Create .env file for frontend build'
     - task: Docker@2
       displayName: Build and push Frontend image
